public/css/styles.css
/* ... */
.home_scroll {
  color: var(--first-color);

  right: -1.5rem;
  bottom: 4rem;
  display: grid;
  row-gap: 2.25rem;
  justify-items: center;
}

.home_scroll-icon {
  font-size: 1.25rem;
}

.home_scroll-name {
  font-size: var(--smaller-font-size);

  transform: rotate(-90deg);
}

/*=============== BUTTONS ===============*/
.button {
  display: inline-block;
  padding: .75rem 1rem;
  transition: .4s;

  border-radius: .5rem;
  background-color: var(--first-color);

  font-weight: var(--font-medium);
  color: var(--body-color);
}

.button:hover {
  background-color: var(--first-color-alt);

  color: var(--body-color);
}

.button--ghost {
  background-color: transparent;
  border: 2px solid var(--first-color);

  color: var(--first-color);
}

/*=============== ABOUT ===============*/
.about_container {
  row-gap: 2.5rem;
}

.about_img {
  width: 220px;
  border-radius: 1.5rem;
  justify-self: center;
}

.about_data {
  text-align: center;
}

.about_info {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: .5rem;
  margin-bottom: 2rem;
}

.about_box {
  background-color: var(--container-color);
  border-radius: .75rem;
  padding: .75rem .5rem;
}

.about_icon {
  font-size: 1.5rem;
  color: var(--first-color);

  margin-bottom: .5rem;
}

.about_title {
  font-size: var(--small-font-size);
}

.about_subtitle {
  font-size: var(--tiny-font-size);
}

.about_description {
  margin-bottom: 2rem;
}

/*=============== SKILLS ===============*/
.skills_container {
  row-gap: 2rem;
  padding-top: 1rem;
}

.skills_content {
  background-color: var(--container-color);
  padding: 1.5rem;
  border-radius: 1.25rem;
}

.skills_title {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--first-color);
  text-align: center;

  margin-bottom: 1.5rem;
}

.skills_box {
  display: flex;
  justify-content: center;
  column-gap: 2.5rem;
}

.skills_group {
  display: grid;
  align-content: flex-start;
  row-gap: 1rem;
}

.skills_data {
  display: flex;
  column-gap: .5rem;
}

.skills .bxs-badge-check {
  font-size: 1rem;
  color: var(--first-color);
}

.skills_name {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  line-height: 18px;
}

.skills_level {
  font-size: var(--tiny-font-size);
}

/*=============== SERVICES ===============*/
.services_container {
  grid-template-columns: repeat(2, 1fr);
  gap: 1.5rem;
  padding-top: 1rem;
}

.services_card {
  background-color: var(--container-color);
  border-radius: 1rem;
  padding: 3rem 1.5rem 1.5rem;
}

.services_title {
  font-size: var(--h3-font-size);

  margin-bottom: 2.5rem;
}

.services_button {
  color: var(--first-color);
  font-size: var(--small-font-size);

  cursor: pointer;
  display: flex;
  align-items: center;
  column-gap: .25rem;
}

.services_button:hover .services_icon {
  transform: translateX(.25rem);
}

.services_icon {
  font-size: 1rem;

  transition: .4s;
}

/* Services modal */
.services_modal {
  position: fixed;
  inset: 0;
  display: grid;
  padding: 2rem 1rem;
  place-items: center;

  z-index: var(--z-modal);
  visibility: hidden;
  opacity: 0;
  transition: .4s;
  background-color: hsla(var(--second-hue), 28%, 16%, .7);
}

.services_modal-content {
  position: relative;
  padding: 4.5rem 1.5rem 2.5rem;

  border-radius: 1.5rem;
  background-color: var(--body-color);
}

.services_modal-title,
.services_modal-description {
  text-align: center;
}

.services_modal-title {
  font-size: var(--h3-font-size);
  color: var(--first-color);

  margin-bottom: 1rem;
}

.services_modal-description {
  font-size: var(--small-font-size);

  margin-bottom: 2rem;
}

.services_modal-list {
  display: grid;
  row-gap: .75rem;
}

.services_modal-item {
  display: flex;
  align-items: flex-start;
  column-gap: .5rem;
}

.services_modal-icon {
  font-size: 1.5rem;
  color: var(--first-color);
}

.services_modal-info {
  font-size: var(--small-font-size);
}

.services_modal-close {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem;
  cursor: pointer;

  font-size: 1.5rem;
  color: var(--first-color);
}

/*Active modal*/
.active-modal {
  opacity: 1;
  visibility: visible;
}

/*=============== WORK ===============*/
.work_card {
  display: flex;
  flex-direction: column;

  background-color: var(--container-color);
  border-radius: 1.5rem;

  padding: 1.25rem 1.5rem;
  margin-bottom: 3rem;
}

.work_img {
  width: 100%;
  border-radius: 1.5rem;
  margin-bottom: 1rem;
}

.work_name {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);

  margin-bottom: .25rem;
}

.work_description {
  font-size: var(--small-font-size);
  flex: 1;
}

.work_buttons {
  margin-top: 1rem;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(105px, max-content));
  place-content: center;
  gap: .50rem;
}

.work_buttons>.button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: .2rem;

  padding: .35rem .90rem;

  font-size: var(--small-font-size);
}

/* Swiper class */
.swiper-slide {
  height: auto;
}

.swiper-pagination-bullet {
  background-color: var(--text-color-light);
}

.swiper-pagination-bullet-active {
  background-color: var(--first-color);
}

/*=============== CONTACT ===============*/
.contact_container {
  row-gap: 3rem;
  padding-bottom: 3rem;
}

.contact_title {
  text-align: center;
  font-size: var(--h3-font-size);

  margin-bottom: 1.5rem;
}

.contact_info {
  display: grid;
  gap: 1rem;
}

.contact_card {
  background-color: var(--container-color);
  border-radius: .75rem;
  padding: 1rem;

  text-align: center;
}

.contact_card-icon {
  font-size: 2rem;
  color: var(--title-color);

  margin-bottom: .25rem;
}

.contact_card-title,
.contact_card-data {
  font-size: var(--small-font-size);
}

.contact_card-title {
  font-weight: var(--font-medium);
}

.contact_card-data {
  display: block;
  margin-bottom: .75rem;
}
/* ... */

